src/tests/snapshots/zyre__tests__snapshots__codegen_snapshots@switch_stmt.zy.snap
---
source: src/tests/snapshots.rs
expression: output
input_file: src/tests/fixtures/switch_stmt.zy
---
const std = @import("std");

fn __zyre_print(val: anytype) void {
    if (comptime @typeInfo(@TypeOf(val)) == .pointer) {
        std.debug.print("{s}\n", .{val});
    } else {
        std.debug.print("{}\n", .{val});
    }
}

fn check(n: i32) void {
    switch (n) {
    1 => __zyre_print("one"),
    2 => __zyre_print("two"),
    else => __zyre_print("other"),
}
}

pub fn main() !void {
    var __zyre_arena = std.heap.ArenaAllocator.init(std.heap.page_allocator);
    defer __zyre_arena.deinit();
    const __zyre_allocator = __zyre_arena.allocator();
    _ = __zyre_allocator;

    check(1);
}
