src/tests/snapshots/zyre__tests__snapshots__ts_snapshots@explicit_main.zy.snap
---
source: src/tests/snapshots.rs
expression: output
input_file: src/tests/fixtures/explicit_main.zy
---
import * as __zyre_std_debug from "./zyre_std_debug.ts";

function main(): void {
  __zyre_std_debug.print("hello from main");
}
main();
