src/tests/snapshots/zyre__tests__snapshots__ts_snapshots@if_stmt.zy.snap
---
source: src/tests/snapshots.rs
expression: output
input_file: src/tests/fixtures/if_stmt.zy
---
import * as __zyre_std_debug from "./zyre_std_debug.ts";

const x = true;
if (x) {
  __zyre_std_debug.print("yes");
}
