src/tests/snapshots/zyre__tests__snapshots__ts_snapshots@modulo.zy.snap
---
source: src/tests/snapshots.rs
expression: output
input_file: src/tests/fixtures/modulo.zy
---
export function rem(a: number, b: number): number {
  return (a % b);
}
