src/tests/snapshots/zyre__tests__snapshots__ts_snapshots@no_std.zy.snap
---
source: src/tests/snapshots.rs
expression: output
input_file: src/tests/fixtures/no_std.zy
---
export function add(a: number, b: number): number {
  return (a + b);
}
